--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ a:link, a:visited {
 }
 
 .hero-kontact {
-    background: url(../assets/images/bikupa.jpg) no-repeat center center fixed;
+    background: url(../assets/images/pinkbi.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -177,7 +177,7 @@ a:link, a:visited {
 }
 
 .hero-blog {
-    background: url(../assets/images/pinkbi.jpg) no-repeat center center fixed;
+    background: url(../assets/images/bluebi.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -227,12 +227,14 @@ a:link, a:visited {
 .blog-text h1 {
     font-size: 32px;
     padding-bottom: 10px;
+    color: #484848;
 }
 
 
 .blog-text p {
     font-size: 18px;
     padding-bottom: 10px;
+    color: #484848;
 }
 
 .vlog {
@@ -259,13 +261,12 @@ hr {
 }
 
 .intro-text h1 {
-    color: #e2e2e2;
     font-size: 38px;
     font-family: 'Open Sans', sans-serif;
 }
 
 .intro-text p {
-    color: #e2e2e2;
+    color: white;
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
 }
@@ -287,13 +288,13 @@ hr {
 }
 
 .about-text h1 {
-    color: #e2e2e2;
+    color: white;
     margin-bottom: 20px;
     font-size: 38px;
 }
 
 .about-text p {
-    color: #e2e2e2;
+    color: white;
     margin-bottom: 20px;
     font-size: 18px;
 }
@@ -381,83 +382,37 @@ hr {
 
 .contact-text {
     width: 50%;
-    text-align: center;
-
+    text-align: start;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.contact-text p {
+.contact-text h1 {
+    margin-bottom: 20px;
+    font-size: 38px;
     color: #e2e2e2;
-    margin-bottom: -20px;
 }
 
-#contact-form {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    margin: 60px auto;
+.contact-text, p {
+    font-size: 18px;
+    color: white;
 }
 
-#contact-form input, #contact-form textarea {
-    margin: 8px 0;
-    padding: 4px;
-    border-radius: 4px;
-    border: none;
-    color: black;
+.contact-list-container {
+    margin-top: 16px;
+    align-items: start;
 }
 
-#contact-form .buttons {
-    display: flex;
-    justify-content: center;
-    margin-top: 4px;
+.contact-list {
+    padding-bottom: 8px;
+    font-size: 22px;
+    font-family: 'Open Sans', sans-serif;
+    color: #e2e2e2;
 }
 
-.error-message {
-    color: hotpink;
-    font-size: 12px;
+.fblogo-list {
+    position: absolute;
+    right: 730px;
+    width: 30px;
+    height: 30px;
+    /*border-radius: 80%;*/
 }
-
-._modal {
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-._modal-content {
-    background-color: white;
-    padding: 40px 60px;
-    border-radius: 8px;
-    box-shadow: 0 0 60px #fffaa6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: fadeIn 1000ms ease-out;
-}
-
-._hide {
-    animation: fadeOut 300ms ease-in;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
-}
-
-
