--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ button:focus {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 72px;
+    height: 10%;
     margin: 0 auto;
     border-radius: 0;
     background-color: #3e2f5f;
@@ -23,15 +23,14 @@ button:focus {
 
 .link {
     position: relative;
-    top: 18px;
-    right: -515px;
+    top: 30%;
+    right: -34%;
     padding: 8px 20px 0 20px;
     text-decoration: none;
     font-size: 12px;
     font-family: 'Open Sans', sans-serif;
     text-transform: uppercase;
     color: whitesmoke;
-    /*background-color: hotpink;*/
 }
 
 #insta-link {
@@ -44,19 +43,13 @@ button:focus {
 
 .nav-brand-wrap {
     position: absolute;
-    top: 14px;
-    left: 20px;
-    /*background-color: yellow;*/
+    top: 20%;
+    left: 2%;
 }
 
-.nav-brand {
-    padding: 6px 28px;
-    font-family: "Satisfy", cursive;
-    font-size: 1.9em;
-    border-radius: 50%;
-    border: dashed;
-    color: #e2e2e2;
-    transform: scale(0.8);
+.logo {
+    width: 20%;
+    border-radius: 2%;
 }
 
 .hero {
@@ -270,6 +263,7 @@ hr {
     color: white;
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
 }
 
 .container-about-text {
@@ -298,31 +292,54 @@ hr {
     color: white;
     margin-bottom: 20px;
     font-size: 18px;
+    font-weight: lighter;
 }
 
 .container-images {
     display: flex;
-    justify-content: center;
     width: 100%;
     min-height: 60vh;
     padding: 50px;
     box-sizing: border-box;
-    background-color: #e2e2e2;
+    /*background-color: #e2e2e2;*/
 }
 
 .images-wraper {
-    width: 90%;
+    width: 100%;
 }
 
-.natural-flavor-container, .flavored-container, .coming-flavor-container{
+h2.section-title {
+    text-align: center;
+    font-family: "Satisfy", cursive;
+    font-size: 4em;
+    margin: 0;
+    color: #5b3984;
+    border-bottom: 1px solid #ec74d8;
+    padding: 16px;
+}
+
+.natural-flavor-container, .flavored-container {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
     width: 100%;
     border-radius: 4px;
     padding: 40px;
-    margin-bottom: 20px;
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
     color: #484848;
     background-color: white;
+}
+
+.honey {
+    width: 20%;
+    padding: 40px;
+    margin: 12px;
+}
+
+.flavored-container, .honey {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .honey-images {
@@ -337,6 +354,13 @@ hr {
     padding: 2px;
 }
 
+.product-text {
+    margin-left: 16px;
+    text-align: left;
+    line-height: 1.5;
+    font-weight: 300;
+}
+
 .footer {
     background-color: #473169;
     color: #e2e2e2;
@@ -346,7 +370,6 @@ hr {
 .footer p {
     font-family: 'Open Sans', sans-serif;
     font-size: 12px;
-    text-transform: uppercase;
     margin-bottom: 4px;
     text-align: center;
 }
@@ -395,6 +418,7 @@ hr {
 
 .contact-text, p {
     font-size: 18px;
+    font-weight: lighter;
 }
 
 .contact-list-container {
@@ -408,4 +432,5 @@ hr {
     padding-bottom: 8px;
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
 }
