--- a/css/style.css
+++ b/css/style.css
@@ -361,34 +361,39 @@ h2.section-title {
     font-weight: 300;
 }
 
-.footer {
+footer {
     background-color: #473169;
-    color: #e2e2e2;
+    color: whitesmoke;
     padding: 20px;
 }
 
-.footer p {
+.footer-info p {
+    display: inline-flex;
+    position: relative;
+    left: 37%;
+    padding-right: 12px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 12px;
-    margin-bottom: 4px;
+    font-size: 14px;
     text-align: center;
-}
-
-.fblogo {
-    width: 30px;
-    height: 30px;
-    margin-right: 2px;
-}
-
-.instalogo {
-    width: 30px;
-    height: 30px;
-    margin-left: 2px;
 }
 
 .social-media {
     text-align: center;
     padding: 6px 0 0 0;
+}
+
+.fa.fa-facebook {
+    padding-right: 12px;
+    font-size: 2em;
+}
+
+.fa.fa-instagram {
+    font-size: 2em;
+}
+
+.creator {
+    font-size: 12px;
+    color: white;
 }
 
 .container-contact-text {
