--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ button:focus {
 .link {
     position: relative;
     top: 30%;
-    right: -34%;
+    right: -30%;
     padding: 8px 20px 0 20px;
     text-decoration: none;
     font-size: 12px;
@@ -72,11 +72,6 @@ button:focus {
 .hero-content-container .buttons {
     display: flex;
     justify-content: center;
-}
-
-.fa.fa-angle-double-down {
-    color: white;
-    font-size: 4em;
 }
 
 a:link, a:visited {
@@ -164,7 +159,7 @@ a:link, a:visited {
 }
 
 .hero-blog {
-    background: url(../assets/images/bluebi.jpg) no-repeat center center fixed;
+    background: url(../assets/images/bikupa.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -223,10 +218,6 @@ a:link, a:visited {
     color: #484848;
 }
 
-.vlog {
-    margin: 10px 0 10px 0;
-}
-
 .container-intro-text {
     display: flex;
     justify-content: center;
@@ -240,6 +231,7 @@ a:link, a:visited {
 
 .intro-text {
     width: 50%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 hr {
