--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ button:focus {
 }
 
 .logo {
-    width: 20%;
+    width: 12%;
     border-radius: 2%;
 }
 
@@ -218,6 +218,11 @@ a:link, a:visited {
     color: #484848;
 }
 
+.img-bee {
+    width: 60%;
+    border-radius: 32px;
+}
+
 .hero-leasing {
     background: url(../assets/images/honey.jpg) no-repeat center center fixed;
     background-size: cover;
@@ -274,6 +279,10 @@ hr {
     font-family: 'Open Sans', sans-serif;
     font-weight: lighter;
     color: white;
+}
+
+p span {
+    display: flex;
 }
 
 .container-about-text {
