--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@ body {
 
 button {
     border: none;
-}
-
-button:focus {
     outline: none;
 }
 
@@ -135,14 +132,14 @@ a:link, a:visited {
     animation: fadeIn 800ms ease-out;
 }
 
-.hero-kontact {
+.hero-contact {
     background: url(../assets/images/pinkbi.jpg) no-repeat center center fixed;
     background-size: cover;
     width: 100%;
     height: 100vh;
 }
 
-.color-overlay-kontact {
+.color-overlay-contact {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -151,7 +148,7 @@ a:link, a:visited {
     background-color: rgba(91, 57, 132, 0.71);
 }
 
-.hero-kontact-content-container h1 {
+.hero-contact-content-container h1 {
     color: white;
     font-family: "Satisfy", cursive;
     font-size: 5em;
@@ -320,7 +317,6 @@ p span {
     min-height: 60vh;
     padding: 50px;
     box-sizing: border-box;
-    /*background-color: #e2e2e2;*/
 }
 
 .images-wraper {
@@ -473,12 +469,26 @@ footer {
     .link {
         right: -22%;
     }
+    .container-images {
+        display: flex;
+        flex-wrap: wrap;
+        width: 80%;
+        min-height: 60vh;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+    .honey-images-big {
+        width: 160px;
+        height: 180px;
+        padding: 2px;
+    }
 }
 
 @media screen and (max-width: 860px) {
     .link {
         right: -16%;
     }
+
 }
 
 @media screen and (max-width: 700px) {
