--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,19 @@ button {
     position: relative;
     top: 30%;
     right: -30%;
+    height: 14px;
     padding: 8px 20px 0 20px;
     text-decoration: none;
     font-size: 12px;
     font-family: 'Open Sans', sans-serif;
     text-transform: uppercase;
     color: whitesmoke;
+}
+
+a:link, a:visited, a:focus {
+    color: white;
+    text-decoration: none;
+    outline: none;
 }
 
 .nav-brand-wrap {
@@ -71,10 +78,6 @@ button {
     justify-content: center;
 }
 
-a:link, a:visited {
-    color: white;
-    text-decoration: none;
-}
 
 .buttons .button {
     margin: 4px;
@@ -462,7 +465,7 @@ footer {
     font-weight: lighter;
 }
 
-@media screen and (max-width: 1200px) {
+@media all and (max-width: 1200px) {
     .link {
         right: -26%;
     }
@@ -471,15 +474,16 @@ footer {
     }
 }
 
-@media screen and (max-width: 1100px) {
+@media all and (max-width: 1100px) {
     .product-text {
         margin-left: 20px;
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media all and (max-width: 1000px) {
     .link {
-        right: -22%;
+        right: -14%;
+        font-size: 16px;
     }
     .container-images {
         display: flex;
@@ -496,16 +500,13 @@ footer {
     }
 }
 
-@media screen and (max-width: 860px) {
-    .link {
-        right: -16%;
-    }
+@media all and (max-width: 860px) {
     .product-text {
         margin-left: 28px;
     }
 }
 
-@media screen and (max-width: 700px) {
+@media all and (max-width: 700px) {
     .link {
         right: -8%;
     }
